<resources>
    <string name="app_name">EduPath</string>
    <string name="onBoarding1">Selamat Datang di EduPath</string>
    <string name="onBoarding1_detail">Aplikasi ini akan membantu anda menemukan minat anda lebih awal</string>
    <string name="onBoarding2">Buat Kelompok Belajar</string>
    <string name="onBoarding2_detail">Dengan EduPath Anda bisa membentuk kelompok berlajar berdasarkan keahlian yang dibutuhkan</string>
    <string name="onBoarding3">Mulai Belajar dan Raih Impianmu</string>
    <string name="onBoarding3_detail">Anda siap memulai? Jelajahi semua fitur luar biasa kami untuk menemukan minat Anda dan meraih masa depan.</string>
    <string name="splash_detail1">Empower Learning Journeys With EduPath</string>
    <string name="splash_detail2">“Find, Flourish, Belong, Succeed!”</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="start_your_journey">Let\'s Start</string>
    <string name="try1">Home Fragment</string>
    <string name="empower_learning_journeys_with_edupath">Empower Learning Journeys With EduPath</string>
    <string name="find_flourish_belong_succeed">“Find, Flourish, Belong, Succeed!”</string>
    <string name="halo">Halo,</string>
    <string name="name">Ahmad Galih Nur Jati</string>
    <string name="bersama_edupath_temukan_minat_amp_bakatmu_dengan_lebih_cepat"><![CDATA[Bersama EduPath temukan minat & bakatmu dengan lebih cepat]]></string>
    <string name="raih_impianmu_bersama_kami">Raih Impianmu Bersama Kami</string>
    <string name="our_features">Our Features</string>
    <string name="tes_minat">Tes Minat</string>
    <string name="temukan_minatmu_disini">Temukan minatmu disini</string>
    <string name="community">Community</string>
    <string name="buat_cari_kelompok_belajar">Buat / cari kelompok belajar</string>
    <string name="try_out">Try Out</string>
    <string name="kerjakan_latihan_soalmu">Kerjakan Latihan Soalmu</string>
    <string name="tvTitleKelompok">Kelompok Belajar Tadika Mesra</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="community_page">Community</string>
    <string name="progress_belajar">Progress Belajar</string>
    <string name="profil">Profil</string>
    <string name="email">Email</string>
    <string name="informasi_kebijakan">Informasi Kebijakan</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="riwayat_pembelian">Riwayat Pembelian</string>
    <string name="kebijakan_amp_privasi"><![CDATA[Kebijakan & Privasi]]></string>
    <string name="syarat_amp_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="bantuan">Bantuan</string>
    <string name="bantuan_amp_dukungan"><![CDATA[Bantuan & Dukungan]]></string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="keluar">Keluar</string>
    <string name="login">Login Akun</string>
    <string name="masuk_dengan_akun_yang_sudah_terdaftar">Masuk dengan akun yang sudah terdaftar</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="mulai_belajar">Mulai Belajar!</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="ayo_mulai_belajar">Ayo Mulai Belajar!</string>
    <string name="cari_minatmu_dan_belajar_bersama_edupath">Cari minatmu dan belajar bersama EduPath</string>
    <string name="gunakan_minimal_8_karakter_dan_angka">Gunakan minimal 8 Karakter dan angka</string>
    <string name="names">Name</string>
    <string name="dengan_mendaftar_kamu_setuju_dengan">Dengan mendaftar, Kamu setuju dengan</string>
    <string name="no_whatsapp">No. Handphone</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="surabaya">Surabaya</string>
    <string name="domisili">Domisili</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="simpan">Simpan</string>
    <string name="sma_smk">SMA/SMK</string>
    <string name="minat_bakat"><![CDATA[Minat & Bakat]]></string>
    <string name="cari_tahu">Cari</string>
    <string name="instruksi">Instruksi</string>
    <string name="contoh_deskripsi">Contoh Deskripsi</string>
    <string name="tulis_deskripsi_mengenai_diri_anda">Tulis Deskripsi Mengenai Diri Anda</string>
    <string name="cari">Cari</string>
    <string name="kembali">Kembali</string>
    <string name="detail">Detail</string>

    <string-array name="banner_title">
        <item>Raih Impianmu Bersama Kami</item>
        <item>Buat Kelompok Belajar Bersama Teman</item>
        <item>Kerjakan Latihan Try Out</item>
    </string-array>

    <string-array name="banner_detail">
        <item>Bersama EduPath temukan minat &amp; bakatmu  dengan lebih cepat</item>
        <item>Buat komunitas atau kelompok belajar versi kamu untuk mendapatkan pengalaman belajar yang lebih menyenangkan</item>
        <item>Berlatih dengan mengerjakan soal try out yang sesuai dengan kurikulum terkini</item>
    </string-array>

    <string-array name="banner_photo">
        <item>https://i.ibb.co/tcsKfGJ/lecture-3986809-1920-1.jpg</item>
        <item>https://i.ibb.co/SP5Z2zh/lecture-3986809-1920-1-1.jpg</item>
        <item>https://i.ibb.co/Nyc7fxk/lecture-3986809-1920-1-2.jpg</item>
    </string-array>

</resources>