<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.auth.SignInActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/lexend_medium"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_detaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk_dengan_akun_yang_sudah_terdaftar"
        android:fontFamily="@font/lexend_medium"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/grey700"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/grey100"
        app:boxStrokeWidth="0dp"
        android:textColorHint="@color/grey500"
        app:startIconDrawable="@drawable/mail"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detaillogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        app:boxBackgroundColor="@color/grey100"
        android:textColorHint="@color/grey500"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textColor="@color/primary"
        android:fontFamily="@font/lexend_regular"
        android:textStyle="normal"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/mulai_belajar"
        android:fontFamily="@font/lexend_regular"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/tv_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_tosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:fontFamily="@font/lexend_medium"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_disini"
        android:fontFamily="@font/lexend_medium"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_tosignup"/>

</androidx.constraintlayout.widget.ConstraintLayout>