<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.auth.SignUpActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayo_mulai_belajar"
        android:fontFamily="@font/lexend_medium"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_detailsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_medium"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/cari_minatmu_dan_belajar_bersama_edupath"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/grey100"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/mail"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        android:textColorHint="@color/grey500"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detailsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/grey100"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        android:textColorHint="@color/grey500"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/names"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/grey100"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        android:textColorHint="@color/grey500"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_saran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/gunakan_minimal_8_karakter_dan_angka"
        android:fontFamily="@font/lexend_regular"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/grey100"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/primary"
        tools:alpha="100"
        android:textColorHint="@color/grey500"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:fontFamily="@font/lexend_regular"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_syaratketentuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/dengan_mendaftar_kamu_setuju_dengan"
        android:fontFamily="@font/lexend_medium"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassEditTextLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_syaratsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="Syarat Ketentuan"
        android:fontFamily="@font/lexend_medium"
        android:textSize="14sp"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/tv_syaratketentuan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/daftar_akun"
        android:textColor="@color/white"
        android:fontFamily="@font/lexend_medium"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/tv_syaratsignup"/>

    <TextView
        android:id="@+id/tv_backtosignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sudah punya akun?"
        android:fontFamily="@font/lexend_regular"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_sudah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="110dp"
        android:fontFamily="@font/lexend_medium"
        android:textColor="@color/primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    
</androidx.constraintlayout.widget.ConstraintLayout>